asteria/core/tests/errors/elaboration_errors/cannot_check_constructor_term_against_non_constructor_type.asteriacore
x : forall {a : Type}. a
  = Foo(;)
  ;;
